# freetype_textdraw

./: .travis.yml  CMakeLists.txt  README.md  testing.ods
fc-lang_conv/: CMakeLists.txt  conv.pl  fc-lang-cat.c  fc-lang-cat.h  fc-lang-cat_find.c.tmpl  fc-lang-data.c  fc-lang-data.h  getline_win32.c  getline_win32.h  main.c  update.sh.cmake
fc-lang_conv/files/: aa_orth.c  ab_orth.c  af_orth.c  ak_orth.c  am_orth.c  an_orth.c  ar_orth.c  as_orth.c  ast_orth.c  av_orth.c  ay_orth.c  az_az_orth.c  az_ir_orth.c  ba_orth.c  be_orth.c  ber_dz_orth.c  ber_ma_orth.c  bg_orth.c  bh_orth.c  bho_orth.c  bi_orth.c  bin_orth.c  bm_orth.c  bn_orth.c  bo_orth.c  br_orth.c  brx_orth.c  bs_orth.c  bua_orth.c  byn_orth.c  ca_orth.c  ce_orth.c  ch_orth.c  chm_orth.c  chr_orth.c  co_orth.c  crh_orth.c  cs_orth.c  csb_orth.c  cu_orth.c  (+208 more)
locale_data/: CMakeLists.txt  clocaledata.cpp  clocaledata.h  iso-15924_data.c  iso-15924_data.h  iso-3166-1_data.c  iso-3166-1_data.h  iso-639-2_data.c  iso-639-2_data.h  iso-639-3_data.c  iso-639-3_data.h
src/: CMakeLists.txt  colorbox.cpp  colorbox.h  colorbox_private.cpp  colorbox_private.h  lowlevel_textrender.cpp  lowlevel_textrender.h  lowlevel_textrender_private.cpp  lowlevel_textrender_private.h  main.cpp  mainwnd.cpp  mainwnd.h  mainwnd.ui  valgrind_check.sh.cmake
tests/: CMakeLists.txt
tests/langtag-parse/: CMakeLists.txt  main.cpp
tools/iso15924/: conv.pl  iso15924-codes.html  readme.txt
tools/iso3166-1/: conv.pl  country codes (iso.org).csv  readme.txt  reserved-zzz.csv
tools/iso639-2/: conv.pl  readme.txt
tools/iso639-3/: conv.pl  deprecated.tab  readme.txt
